Prototyping automated 360 system

--- a/motiondetect.ini
+++ b/motiondetect.ini
@@ -36,13 +36,13 @@ name = test
 ;
 ; File ../../resources/walking.mp4
 
-url = ../../resources/walking.mp4
+url = http://0.0.0.0:5000
 
 ; Socket timeout in seconds (only used for mjpegclient)
 ;
 ; Use socketTimeout = 0 to leave default value intact.
 
-socketTimeout = 10
+socketTimeout = 30
 
 ; Use to resize image for better detection/performance
 
