--- a/motiondetect.ini
+++ b/motiondetect.ini
@@ -50,7 +50,7 @@ resizeWidthDiv = 640
 
 ; Detection type: M for motion only, P for pedestrian or H for Haar Cascades
 
-detectType = P
+detectType = m
 
 ; FPS sample interval in seconds (how often to calculate FPS for debug logging).
 
