major leaning, removing unnecessary files. still needs more work. video part is somewhat set, need a persistant instance for video processing and uploading

--- a/motiondetect.ini
+++ b/motiondetect.ini
@@ -82,7 +82,7 @@ mark = True
 
 ; Save frames that are detected
 
-saveFrames = True
+saveFrames = False
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ; Motion related
@@ -200,28 +200,4 @@ minWidth = 14
 
 minHeight = 28
 
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-; SCP related
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
-[scp]
-
-; Host name
-
-hostName = localhost
-
-; User name
- 
-userName = test
-
-; Remote server's dir
-
-remoteDir = /home/test/Downloads/scptest
-
-; Command timeout in seconds
-
-timeout = 600
-
-; Delete source file after copy to remote
-
-deleteSource = False
