modifications to a lot of stuff

--- a/motiondetect.ini
+++ b/motiondetect.ini
@@ -46,11 +46,11 @@ socketTimeout = 30
 
 ; Use to resize image for better detection/performance
 
-resizeWidthDiv = 640
+resizeWidthDiv = 850
 
 ; Detection type: M for motion only, P for pedestrian or H for Haar Cascades
 
-detectType = m
+detectType = p
 
 ; FPS sample interval in seconds (how often to calculate FPS for debug logging).
 
@@ -94,7 +94,7 @@ saveFrames = False
 ; motion analysis (black pixels are ignored). The image size should be the
 ; same as frameResizeWidth x frameResizeHeight. Leave blank for no mask.
 
-ignoreMask =
+ignoreMask = ""
 ;../../resources/mask.png
 
 ; Frames to skip during recalibration so as not to trigger false motion. If
@@ -108,7 +108,7 @@ kSize = (8,8)
 
 ; Weight of the input image for accumulateWeighted operation.
 
-alpha = 0.03
+alpha = 0.000
 
 ; Threshold for Threshold Binary operation.
 
@@ -128,7 +128,7 @@ stopThreshold = 0.0
 
 ; Number of times dilate is applied.
 
-dilateAmount = 15
+dilateAmount = 10
 
 ; Number of times erosion is applied.
 
