--- a/motiondetect.ini
+++ b/motiondetect.ini
@@ -50,15 +50,8 @@ resizeWidthDiv = 850
 
 ; Detection type: M for motion only, P for pedestrian or H for Haar Cascades
 
-detectType = p
+detectType = m
 
-; FPS sample interval in seconds (how often to calculate FPS for debug logging).
-
-fpsInterval = 60.0
-
-; Camera FPS. Video files ignore this and use file's fps
-
-fps = 3
 
 ; Maximum frame buffer
 
@@ -68,13 +61,6 @@ frameBufMax = 100
 
 fourcc = XVID
 
-; File extension for the recorded video avi (or other container supported by cv2.VideoWriter)
-
-recordFileExt = avi
-
-; Directory where videos are saved.
-
-recordDir = ~/motion
 
 ; Mark motion ROI
 
@@ -94,7 +80,7 @@ saveFrames = False
 ; motion analysis (black pixels are ignored). The image size should be the
 ; same as frameResizeWidth x frameResizeHeight. Leave blank for no mask.
 
-ignoreMask = ""
+ignoreMask = mask.png
 ;../../resources/mask.png
 
 ; Frames to skip during recalibration so as not to trigger false motion. If
@@ -128,7 +114,7 @@ stopThreshold = 0.0
 
 ; Number of times dilate is applied.
 
-dilateAmount = 10
+dilateAmount = 15
 
 ; Number of times erosion is applied.
 
